@@ -9,16 +9,24 @@ import org.springframework.security.config.annotation.authentication.builders.Au
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.logout.HttpStatusReturningLogoutSuccessHandler;
+import org.springframework.security.web.authentication.logout.SecurityContextLogoutHandler;
+import org.springframework.security.web.server.SecurityWebFilterChain;
+import org.springframework.security.web.server.authentication.logout.DelegatingServerLogoutHandler;
+import org.springframework.security.web.server.authentication.logout.SecurityContextServerLogoutHandler;
+import org.springframework.security.web.server.authentication.logout.WebSessionServerLogoutHandler;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import javax.servlet.ServletException;
+import javax.servlet.http.Cookie;
 import javax.sql.DataSource;
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -43,9 +51,9 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        configuration.setAllowedOrigins(Arrays.asList(appConfig.getAppUrl()));
+        configuration.setAllowedOrigins(List.of(appConfig.getAppUrl()));
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PUT","OPTIONS","PATCH", "DELETE"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Cache-Control", "Content-Type"));
+        configuration.setAllowedHeaders(List.of("x-requested-with", "withCredentials", "Authorization", "Cache-Control", "Content-Type", "Origin", "key"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -57,14 +65,23 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
     protected void configure(HttpSecurity http) throws Exception {
         http.cors().and().authorizeRequests()
                 .antMatchers("/login", "/register").permitAll()
-                .antMatchers("/adminRegister").hasAuthority("1")
                 .anyRequest().authenticated()
                 .and()
-                .logout().logoutSuccessUrl("/")
-                .and()
-                .logout().logoutSuccessHandler((new HttpStatusReturningLogoutSuccessHandler(HttpStatus.OK))).permitAll()
-                .and()
-                .httpBasic();
+                .logout(logout -> logout
+                .addLogoutHandler((request, response, auth) -> {
+                    for (Cookie cookie : request.getCookies()) {
+                        String cookieName = cookie.getName();
+                        Cookie cookieToDelete = new Cookie(cookieName, null);
+                        cookieToDelete.setMaxAge(0);
+                        response.addCookie(cookieToDelete);
+                    }
+                    try {
+                        request.logout();
+                    } catch (ServletException e) {
+                        throw new RuntimeException(e);
+                    }
+                })
+        ).httpBasic();
 
         http.csrf().disable();
     }
@@ -80,7 +97,7 @@ public class SecurityConfig extends WebSecurityConfigurerAdapter {
                         "SELECT u.email, t.acesso " +
                                 "FROM tipo_usuario t, usuario u " +
                                 "WHERE u.email = ? " +
-                                "AND u.ID_USUARIO = t.ID_USUARIO"
+                                "AND u.id_usuario = t.id_usuario"
                 );
     }
 }
